.grafana/grafana-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: group12route-grafana
  namespace: group12
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`12.web.dops.tech`) && PathPrefix(`/grafana`)
    kind: Rule
    services:
    - name: grafana-service
      port: 8080
  tls:
    certResolver: myresolver
